--- a/SeeFood/Base.lproj/Main.storyboard
+++ b/SeeFood/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IUQ-wx-DoV">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -16,13 +16,52 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="id3-Ry-hco">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="id3-Ry-hco" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="6QH-Xn-ZVS"/>
+                            <constraint firstItem="id3-Ry-hco" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="JJX-K2-d5B"/>
+                            <constraint firstAttribute="bottom" secondItem="id3-Ry-hco" secondAttribute="bottom" id="izQ-le-fkc"/>
+                            <constraint firstItem="id3-Ry-hco" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ucD-67-9Yj"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="6pj-uI-6U2">
+                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="FKg-tZ-8X5">
+                            <connections>
+                                <action selector="cameraTab:" destination="BYZ-38-t0r" id="QA2-mI-UyB"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="id3-Ry-hco" id="Oqq-Hd-cpe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="115"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="114.50892857142857"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="hqb-Qk-vxp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IUQ-wx-DoV" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="I0W-UX-vKL">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="RSi-x7-Cap"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="32K-sR-nVi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="25" y="115"/>
         </scene>
     </scenes>
     <resources>
